
[package]
name = "web3-utils"
version = "0.1.1"
authors = ["Fan Mocheng <leftear1321.@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/left-TTC/web3-utils"
description = "A utility crate for web3 name service operations, forked from bonfida/utils" 


[dependencies]
pyth-sdk-solana = "0.10.6"
solana-program = "2.1.14"
web3-macros = "0.0.2"

