
[package]
name = "web3-utils"
version = "0.1.3"
authors = ["Fan Mocheng <leftear1321.@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/left-TTC/web3-utils"
description = "A utility crate for web3 name service operations, forked from bonfida/utils" 


[dependencies]
borsh = "1.5.7"
bytemuck = "1.23.2"
pyth-sdk-solana = "0.10.6"
pyth-solana-receiver-sdk = "1.0.0"
solana-program = "2.1.14"
web3-macros = "0.0.2"


[features]
default = []
devnet = []

