
[package]
name = "web3-utils"
version = "0.1.12"
authors = ["Fan Mocheng <leftear1321.@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/left-TTC/web3-utils"
description = "A utility crate for web3 name service operations, forked from bonfida/utils" 


[dependencies]
borsh = "0.10.3"
bytemuck = "1.23.2"
pyth-sdk-solana = "0.10.6"
pyth-solana-receiver-sdk = "1.0.0"
solana-program = "2.1.14"
web3-macros = {version = "0.0.4", path = "../macros"}
lazy_static = {version = "1.4.0", optional=true}


[features]
default = []
devnet = []

